--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <nav>
       <p>THE WORLD WONDERS</p>
     </nav>
+
+    <section class="container flex wrap" id="card-container"></section>
+
+    <script src="/scripts/dom.js"></script>
+    <script src="/scripts/index.js"></script>
   </body>
 </html>
