--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <link rel="stylesheet" href="/styles/base.css" />
     <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="/styles/utilities.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WORLD WONDERS</title>
+    <title>The World Wonders</title>
   </head>
   <body>
     <nav>
       <p>THE WORLD WONDERS</p>
     </nav>
 
-    <section class="container flex wrap" id="card-container"></section>
+    <section class="container flex column" id="container"></section>
 
     <script src="/scripts/dom.js"></script>
     <script src="/scripts/index.js"></script>
