--- a/pages/wonder.html
+++ b/pages/wonder.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/styles/utilities.css" />
     <link rel="stylesheet" href="/styles/base.css" />
     <link rel="stylesheet" href="/styles/wonder.css" />
-    <link rel="stylesheet" href="/styles/utilities.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The World Wonder</title>
@@ -21,15 +21,15 @@
 
         <div class="info" id="info"></div>
       </div>
+    </section>
 
-      <div class="flex">
-        <button id="back-img" class="info-item">
-          <img src="../assets/icons/left-arrow.png" />
-        </button>
-        <button id="next-img" class="info-item">
-          <img src="../assets/icons/right-arrow.png" />
-        </button>
-      </div>
+    <section class="flex buttons">
+      <button id="back-img" class="info-item">
+        <img src="../assets/icons/left-arrow.png" />
+      </button>
+      <button id="next-img" class="info-item">
+        <img src="../assets/icons/right-arrow.png" />
+      </button>
     </section>
 
     <script src="/scripts/dom.js"></script>
